--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,19 @@
   padding: 20px;
 }
 
+.trigger-btn {
+  font-size: 16px;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+
+
+  
+}
+
+
 /* Sider */
 .sider {
   height: 100vh;
@@ -18,9 +31,11 @@
   top: 0;
 }
 
+
+
 .logo {
   color: #4f6f52;
-  margin: 30px 0;
+ 
   font-size: 1.5rem;
 
 }
