--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 /* Sider */
 .sider {
   height: 100vh;
-  position: sticky !important;
+  position: sticky!important;
   left: 0;
   bottom: 0;
   top: 0;
@@ -35,7 +35,7 @@
 
 .logo {
   color: #4f6f52;
- 
+ margin: 30px 0;
   font-size: 1.5rem;
 
 }
