--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,37 @@
   top: 0;
 }
 
-
-
 .logo {
   color: #4f6f52;
  margin: 30px 0;
   font-size: 1.5rem;
 
+}
+
+.menu-bar {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-weight: 500;
+}
+
+.ant-menu-item-selected {
+  background-color: #4f6f52!important;
+  color: white!important;
+}
+
+.header-icon {
+  background: #d2e3c8;
+  padding: 8px;
+  border-radius: 4px;
+  font-size: 15px;
+  color: #4f6f52;
+  cursor: pointer;
+
+}
+
+/* button and color */
+.ant-btn:hover {
+color: #4f6f52!important;
+border-color: #4f6f52!important;
 }
