--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,45 @@
 color: #4f6f52!important;
 border-color: #4f6f52!important;
 }
+
+.ant-btn-primary {
+  background-color:#4f6f52!important;
+
+}
+
+.ant-btn-primary:hover {
+  background-color: #173a1a!important;
+  color: #fff!important;
+}
+
+.primary--color {
+  color: #4f6f52!important;
+
+}
+
+.primary--light--color {
+  color: #739072!important;
+
+
+}
+
+.secondary-color {
+  color: #86a789!important;
+
+}
+
+.light--color {
+  color: d2e3c8!important;
+}
+
+.gray--color {
+  color: rgb(182, 181, 181)!important;
+}
+
+
+/* PLant Lists */
+.plant-card {
+  flex: 1;
+  height: 250px;
+  text-align: center;
+}
